# gmac3dviewer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
osgsdk/win64-msvc/data/: README  avatar.osg  bignathan.osg  cessna.osg  cessna.osgt  cessnafire.osg  cessnafire.osgt  clock.osgt  cow.osgt  cube_mapped_torus.osgt  dumptruck.osg  dumptruck.osgt  example.osg  glider.osgt  glsl_confetti.osgt  glsl_simple.osgt  lz.osg  lz.osgt  morphing.osg  morphtarget_shape0.osg  morphtarget_shape1.osg  nathan.osg  osg.conf  osgcool.osgt  robot.osg  skydome.osgt
osgsdk/win64-msvc/data/Configuration/: 3DSphericalDisplay.view  3DSphericalDisplayTopProjector.view  AllScreens.view  PanoramicSphericalDisplay.view  PanoramicSphericalDisplayTopProjector.view  SingleScreen.view  SmallWindow.view
osgsdk/win64-msvc/data/htdocs/: config.rb  index.html
osgsdk/win64-msvc/data/osgWidget/: README  osgwidgetshader-frag.glsl  osgwidgetshader-vert.glsl  osgwidgetwindow.lua  osgwidgetwindow.py
osgsdk/win64-msvc/data/shaders/: blocky.frag  blocky.vert  depthpeel_colormap.frag  depthpeel_colormap.vert  depthpeel_edgemap.frag  depthpeel_edgemap.vert  depthpeel_final.frag  depthpeel_final.vert  depthpeel_normaldepthmap.frag  depthpeel_normaldepthmap.vert  eroded.vert  gameoflife.frag  lighting.vert  line_rain.vert  lookup.frag  lookup.vert  marble.frag  marble.vert  osgshadercomposition.frag  osgshadercomposition.vert  osgssboComputeShader.cs  osgssboFragmentShader.fs  osgssboGeometryShader.gs  osgssboVertexShader.vs  osgtexture2DArray.frag  osgtexture2DArray.vert  overlay_perspective_main.frag  overlay_perspective_rtt.vert  point_rain.frag  point_rain.vert  quad_rain.vert  rain.frag  rain.vert  screen.frag  screen.vert  shader.vert  skinning.vert  stereomatch_aggregate.frag  stereomatch_clear.frag  stereomatch_select.frag  (+30 more)
osgsdk/win64-msvc/data/ui/: TabWidget.lua  TransferFunctionWidget.lua  VolumeEditor.lua  VolumeEditorWidget.lua  VolumeSettings.lua  WidgetUtils.lua
osgsdk/win64-msvc/gdal-data/: LICENSE.TXT  ogrvrt.xsd
osgsdk/win64-msvc/include/OpenThreads/: Affinity  Exports  Thread
osgsdk/win64-msvc/include/osg/: AlphaFunc  AnimationPath  ApplicationUsage  Array  AttributeDispatchers  AudioStream  AutoTransform  Billboard  BindImageTexture  BlendColor  BlendEquation  BlendEquationi  BlendFunc  BlendFunci  BoundingBox  BoundingSphere  BoundsChecking  BufferIndexBinding  BufferObject  BufferTemplate  Callback  Camera  Capability  ClampColor  ClipControl  ClusterCullingCallback  CollectOccludersVisitor  ColorMaski  ComputeBoundsVisitor  ContextData  CoordinateSystemNode  CopyOp  CullSettings  CullStack  CullingSet  DepthRangeIndexed  DispatchCompute  DisplaySettings  DrawPixels  Drawable  (+111 more)
osgsdk/win64-msvc/include/osgAnimation/: Action  Animation  AnimationManagerBase  AnimationUpdateCallback  BasicAnimationManager  BoneMapVisitor  Channel  CubicBezier  Interpolator  Keyframe  LinkVisitor  MorphGeometry  MorphTransformHardware  MorphTransformSoftware  RigGeometry  RigTransform  RigTransformHardware  RigTransformSoftware  Skeleton  UpdateMatrixTransform  UpdateUniform  VertexInfluence
osgsdk/win64-msvc/include/osgDB/: AuthenticationMap  Callbacks  ClassInterface  ConvertBase64  ConvertUTF  DataTypes  DatabasePager  DatabaseRevisions  ExternalFileWriter  FileNameUtils  FileUtils  ImageOptions  ImagePager  Input  InputStream  ObjectCache  ObjectWrapper  Options  OutputStream  PluginQuery  ReadFile  ReaderWriter  Registry  Serializer  SharedStateManager  StreamOperator  WriteFile  XmlParser  fstream
osgsdk/win64-msvc/include/osgFX/: Cartoon  Effect  MultiTextureControl  Registry  Scribe  Technique
osgsdk/win64-msvc/include/osgGA/: CameraManipulator  Device  Event  EventHandler  EventQueue  EventVisitor  Export  GUIActionAdapter  GUIEventAdapter  GUIEventHandler  KeySwitchMatrixManipulator  MultiTouchTrackballManipulator  StandardManipulator  UFOManipulator  Widget
osgsdk/win64-msvc/include/osgManipulator/: AntiSquish  Command  Constraint  Dragger  Scale2DDragger  ScaleAxisDragger  TrackballDragger  Translate1DDragger  TranslateAxisDragger  TranslatePlaneDragger
osgsdk/win64-msvc/include/osgParticle/: ConnectedParticleSystem  ConstantRateCounter  Counter  DomainOperator  Emitter  Interpolator  LinearInterpolator  Particle  ParticleEffect  ParticleProcessor  ParticleSystem  PrecipitationEffect  Program  Shooter  VariableRateCounter
osgsdk/win64-msvc/include/osgPresentation/: AnimationMaterial  CompileSlideCallback  Cursor  KeyEventHandler  PickEventHandler  PropertyManager  SlideEventHandler  SlideShowConstructor  Timeout
osgsdk/win64-msvc/include/osgShadow/: DebugShadowMap  MinimalDrawBoundsShadowMap  MinimalShadowMap  ParallelSplitShadowMap  ShadowMap  ShadowSettings  ShadowTechnique  ShadowTexture  ShadowedScene  StandardShadowMap  ViewDependentShadowMap  ViewDependentShadowTechnique
osgsdk/win64-msvc/include/osgSim/: ImpostorSprite  InsertImpostorsVisitor  LightPointNode  LineOfSight  OverlayNode  ScalarBar  ShapeAttribute  SphereSegment
osgsdk/win64-msvc/include/osgTerrain/: DisplacementMappingTechnique  GeometryPool  Layer  Terrain  TerrainTechnique  TerrainTile
osgsdk/win64-msvc/lib/: OpenThreads.lib  osg.lib  osgAnimation.lib  osgDB.lib  osgFX.lib  osgGA.lib  osgManipulator.lib  osgParticle.lib  osgPresentation.lib  osgShadow.lib  osgSim.lib  osgTerrain.lib  osgText.lib  osgUI.lib  osgUtil.lib  osgViewer.lib  osgVolume.lib  osgWidget.lib
src/: main.cpp  qml.qrc  qtquickcontrols2.conf
src/gosg/: ganimationmanager.cpp  ganimationmanager.h  gcommon.cpp  gcommon.h  gcoord.cpp  gcoord.h  glight.cpp  glight.h  gmanipulator.cpp  gmanipulator.h  gnodevisitor.h  gosgcontrol.cpp  gosgcontrol.h  gosgkeymap.cpp  gosgkeymap.h  gosgrenderitem.cpp  gosgrenderitem.h  gparticle.cpp  gparticle.h  gplatform.cpp  gplatform.h  gskybox.cpp  gskybox.h
src/ico/: main.rc
src/qml/: AnimationRect.qml  BusyPopup.qml  ErrorPopup.qml  FlyPathRect.qml  FpsLabel.qml  MainFunctions.qml  MainOsgControl.qml  MainTest.qml  MessagePopup.qml  Scene3d.qml  TestPopup.qml  main.qml
(+111 files in other folders)
